--- a/BackendIdiomas/BackendIdiomas.Infrastructure/BackendIdiomas.Infrastructure.csproj
+++ b/BackendIdiomas/BackendIdiomas.Infrastructure/BackendIdiomas.Infrastructure.csproj
@@ -5,6 +5,10 @@
     <ProjectReference Include="..\BackendIdiomas.Application\BackendIdiomas.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
